# WappyWith

./: Cargo.toml  FILES.md  QUICKSTART.md  README.md  TECHNOLOGIES.md  detector.rs  lib.rs  main.rs
src/: README.md  technologies.rs  verify.sh
